--- a/countdown.html
+++ b/countdown.html
@@ -6,212 +6,24 @@
         <title>Marco's countdown</title>
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
         <link href = "css/bootstrap.min.css" rel = "stylesheet">
-		<style>
-			html
-			{
-				font-family:sans-serif;
-			}
-			body
-			{
-				color: #F4F4F4;
-				background-color: #333333;
-			}
-			.col
-			{
-				margin-top: 24%;
-			}
-			h3{font-size: 36px;}
-			h1{font-size: 96px;}
-			h2{font-size: 36px;}
-			@media (max-width: 48em)
-			{
-				h3{font-size: 27px;}
-				h1{font-size: 72px;}
-				h2{font-size: 27px;}
-			}
-			@media (max-width: 36em)
-			{
-				h3{font-size: 14px;}
-				h1{font-size: 36px;}
-				h2{font-size: 14px;}
-			}
-		</style>
+		<link href = "css/countdown.css" rel = "stylesheet">
     </head>
     <body>
 
 		<!--## countdown ##-->
 		<div class="container container-table">
-			<div class="row">
+			<div class="row vertical-center-row">
 				<div class="col text-center">
-					<h3><p id="header"></p><h3>
+					<h3><p id="title"></p><h3>
 					<h1><p id="countdown"></p><h1>
-					<h2><p id="footer"></p></h2>
+					<h2><p id="comment"></p></h2>
 				</div>
 			</div>
 		</div>
 
         <script src = "https://code.jquery.com/jquery-latest.min.js"></script>
         <script src = "js/bootstrap.min.js"></script>
-		<script>
-			function getValueForKey(key, fallback, url)
-			{
-				if(! url)
-				{
-					url = window.location.href;
-				}
-				if(! fallback)
-				{
-					fallback = 0;
-				}
-				key = key.replace(/[\[\]]/g, "\\$&");
-				var regex = new RegExp("[?&]" + key + "(=([^&#]*)|&|#|$)"),
-						results = regex.exec(url);
-				var value = fallback;
-				if(results && results[2])
-				{
-					value = decodeURIComponent(results[2].replace(/\+/g, " "));
-				}
-				return value;
-			}
-
-
-			var sourceDate = new Date();
-			var sourceYY = sourceDate.getFullYear();
-			var period = Number(getValueForKey('p', -1));
-			if(period < 0)
-			{
-				var title  = getValueForKey('x', "New Year's Day " + (sourceYY + 1));
-				var targetYY = Math.floor(getValueForKey('YYYY', sourceYY + 1));
-				var targetMM = Math.floor(getValueForKey('MM', 1)) - 1;
-				var targetDD = Math.floor(getValueForKey('DD', 1)) - 1;
-				var targethh = Math.floor(getValueForKey('hh'));
-				var targetmm = Math.floor(getValueForKey('mm'));
-				var targetDate = new Date(targetYY, targetMM, targetDD, targethh, targetmm, 0, 0);
-			}
-			else
-			{
-				var title  = getValueForKey('x', " ");
-				var sourceMM = sourceDate.getMonth() + 1;
-				var sourceDD = sourceDate.getDate() + 1;
-				var sourcehh = sourceDate.getHours();
-				var sourcemm = sourceDate.getMinutes() + period;
-				var targetDate = new Date(sourceYY, sourceMM - 1, sourceDD - 1, sourcehh, sourcemm, 0, 0);
-			}
-			var zeroHour = targetDate.getTime();
-
-
-			var x = setInterval(function()
-			{
-				var countdown = zeroHour - new Date().getTime();
-				if(countdown < 0)
-				{
-					countdown -= 1000; // compensate for Math.floor
-				}
-				var dd = Math.floor( Math.abs(countdown)                          / (24 * 60 * 60 * 1000));
-				var hh = Math.floor((Math.abs(countdown) % (24 * 60 * 60 * 1000)) /      (60 * 60 * 1000));
-				var mm = Math.floor((Math.abs(countdown) %      (60 * 60 * 1000)) /           (60 * 1000));
-				var ss = Math.floor((Math.abs(countdown) %           (60 * 1000)) /                 1000 );
-				var countdownString = "";
-				var commentString = "";
-				if(countdown > 0)
-				{
-					countdownString += "&minus;";
-					if(dd == 0)
-					{
-						if(hh >= 23)
-						{
-							commentString = "less than a day";
-						}
-						else if(hh == 0)
-						{
-							if(mm >= 50)
-							{
-								commentString = "less than an hour";
-							}
-							else if(mm == 0)
-							{
-								if(ss >50)
-								{
-									commentString = "less than a minute";
-								}
-								else if(ss == 10)
-								{
-									commentString = "ten";
-								}
-								else if(ss == 9)
-								{
-									commentString = "nine";
-								}
-								else if(ss == 8)
-								{
-									commentString = "eight";
-								}
-								else if(ss == 7)
-								{
-									commentString = "seven";
-								}
-								else if(ss == 6)
-								{
-									commentString = "six";
-								}
-								else if(ss == 5)
-								{
-									commentString = "five";
-								}
-								else if(ss == 4)
-								{
-									commentString = "four";
-								}
-								else if(ss == 3)
-								{
-									commentString = "three";
-								}
-								else if(ss == 2)
-								{
-									commentString = "two";
-								}
-								else if(ss == 1)
-								{
-									commentString = "one";
-								}
-								else if(ss == 0)
-								{
-									commentString = "ZERO";
-								}
-							}
-						}
-					}
-				}
-				else
-				{
-					countdownString += "+";
-					if(period < 0)
-					{
-						if(dd == 0)
-						{
-							commentString = "Happy New Year!";
-						}
-					}
-					else
-					{
-						if((dd == 0) && (hh == 0) && (mm == 0))
-						{
-							commentString = "time's up";
-						}
-					}
-				}
-				if((dd > 0) || (hh >= 23))
-				{
-					countdownString += dd + ".";
-				}
-				countdownString += ("00" + hh).slice(-2) + ":";
-				countdownString += ("00" + mm).slice(-2) + ":";
-				countdownString += ("00" + ss).slice(-2);
-				document.getElementById("header").innerHTML = title;
-				document.getElementById("countdown").innerHTML = countdownString;
-				document.getElementById("footer").innerHTML = commentString;
-			}, 1000);
-		</script>
+		<script src = "js/countdown.js"></script>
     </body>
 </html>
 
