--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class = "row row-pitch">
                 <div class = "col-12">
-                        <h3>creative&nbsp;scientist with inquiring&nbsp;mind and attention&nbsp;to&nbsp;detail</h3>
+                        <h3>creative&nbsp;scientist with inquiring&nbsp;mind, an eye&nbsp;for&nbsp;detail, and another for the bigger&nbsp;picture</h3>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                     <center>
                         <i>&#0187; Captain, the most elementary and valuable statement in&nbsp;science, the&nbsp;beginning&nbsp;of&nbsp;wisdom, is, &#8250;&nbsp;I&nbsp;do&nbsp;not&nbsp;know&nbsp;&#8249;. &#0171</i>
                     </center>
-                    &#8212; Lieutenant Commander Data, star date 42193:6
+                    &#8212; Lieutenant Commander Data, stardate 42193.6
                 </div>
             </div>
         </div>
