added license to countdown

--- a/countdown.html
+++ b/countdown.html
@@ -21,6 +21,10 @@
 			</div>
 		</div>
 
+		<div class = "license">
+			<a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" class = "navbar-btn btn pull-right"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"/></a>
+		</div>
+
         <script src = "https://code.jquery.com/jquery-latest.min.js"></script>
         <script src = "js/bootstrap.min.js"></script>
 		<script src = "js/countdown.js"></script>
