fixed period countdown start offset

--- a/countdown.html
+++ b/countdown.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- EXAMPLE: https://mselig.github.io/countdown.html?YYYY=2042&MM=05&DD=04&hh=00&mm=00&p=-1&x=May the force be with you! -->
+<!-- EXAMPLE: https://mselig.github.io/countdown.html?YYYY=2042&MM=05&DD=04&hh=00&mm=00&p=-1&x=May%20the%20force%20be%20with%20you!&y=Patient%20you%20are. -->
 <html>
     <head>
         <link rel="icon" href="myfavicon.png">
