updated bibliography; added missing js

--- a/bib.html
+++ b/bib.html
@@ -33,6 +33,30 @@
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
+Patent application<!-- "dashcam" -->
+                                    <small>2018</br>
+                                    Qais Noorshams, <u>Marco Selig</u>, Pradeep Parameshwaran, Eric Kass
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">(non-disclosure)</p>
+                            </div>
+                        </div>
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
+Patent application<!-- "agents" -->
+                                    <small>2017</br>
+                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Utz Bacher
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">(non-disclosure)</p>
+                            </div>
+                        </div>
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
 GeV excess and phenomenological astrophysics modeling
                                     <small>2015</br>
                                     Xiaoyuan Huang, Torsten En&#223;lin, <u>Marco Selig</u>
@@ -352,7 +376,7 @@ NIFT<font style="font-size: 80%">Y</font>
 
         <script src = "https://code.jquery.com/jquery-latest.min.js"></script>
         <script src = "js/bootstrap.min.js"></script>
-        <script src = "js/trunk8.js"></script>
+        <script src = "js/trunk8.min.js"></script>
         <script>
             $('.t8-3lines').trunk8({
                 lines: 3
