--- a/bib.html
+++ b/bib.html
@@ -28,29 +28,93 @@
 
 
                     <div class = "col-lg-9">
-                        <!--## paper ##-->
+                        <!--## patents@IBM ##-->
                         <div class = "panel panel-default">
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
-Patent application<!-- "dashcam" -->
-                                    <small>2018</br>
-                                    Qais Noorshams, <u>Marco Selig</u>, Pradeep Parameshwaran, Eric Kass
+<font style = "background-color: #333333;">PATENT APPLICATION</font><!-- "ZSALAD" 2020 -->
+                                    <small>2020+</br>
+                                    <u>Marco Selig</u>, Pavel Kravetskiy, Yuri Dragun
                                     </small></h3>
                                 </div>
-                                <p class = "t8-3lines t8-expand">(non-disclosure)</p>
+                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
                             </div>
                         </div>
                         <div class = "panel panel-default">
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
-Patent application<!-- "agents" -->
-                                    <small>2017</br>
+<font style = "background-color: #333333;">INTELLECTUAL PROPERTY</font><!-- WORKLOAD MANAGEMENT USING REINFORCEMENT LEARNING 2019 -->
+                                    <small>2019+</br>
+                                    <u>Marco Selig</u>, Tobias Huschle, Anastasiia Didkovska, Toni Pohl, Karin Genther, Dieter Wellerdiek, Elpida Tzortzatos
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                            </div>
+                        </div>
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
+<font style = "background-color: #333333;">INVENTION</font><!-- PROACTIVELY PERFORMING TASKS BASED ON ESTIMATING HARDWARE RECONFIGURATION TIMES 2019 -->
+                                    <small>2019+</br>
+                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Norman B&#246;wing, Simon Spinner
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                            </div>
+                        </div>
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
+<font style = "background-color: #333333;">PATENT APPLICATION</font><!-- SELECTIVE ENHANCEMENT OF INTERACTIVE CONFIGURATION INTERFACES 2018-->
+                                    <small>2018+</br>
+                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Norman B&#246;wing
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                            </div>
+                        </div>
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
+Access control of specific encrypted data segment
+                                    <small>2020</br>
+                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Eric Kass
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">A computer-implemented method for metadata-based retention of personal data may be provided. The method comprises recording data by a recording system. The data comprise payload data and metadata comprising information about the payload data and an event type; and a rule is associated with the event type, wherein the rule is indicative whether the data shall be stored persistently or temporary. The method comprises further segmenting the recorded data into a plurality of non-overlapping data segments, encrypting each data segment of the plurality of non-overlapping data segments with a unique key each, transmitting the encrypted data segments wirelessly, and storing, using a secure service container, selected ones of the plurality of non-overlapping data segments as a function of the rule.</p>
+                                <a class = "btn btn-primary" href = "http://appft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&d=PG01&p=1&u=%2Fnetahtml%2FPTO%2Fsrchnum.html&r=1&f=G&l=50&s1=%2220200285767%22.PGNR.&OS=DN/20200285767&RS=DN/20200285767">US 20200285767 A1</a>
+                            </div>
+                        </div>
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
+Migrating a software container taking into account resource constraints
+                                    <small>2019</br>
                                     Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Utz Bacher
                                     </small></h3>
                                 </div>
-                                <p class = "t8-3lines t8-expand">(non-disclosure)</p>
+                                <p class = "t8-3lines t8-expand">Provided is a method for determining a target host from a plurality of candidate hosts for migrating a software container. A management software component may instantiate a source agent software component on a source host and a target agent software component on each of a plurality of candidate target hosts. Resource requirements of at least one software container may be determined by the source agent software component. Resource capabilities of each of a plurality of target hosts may be determined by the target agent software components. The source agent software component may compare the resource requirements to the resource capabilities of each of the plurality of candidate target hosts. If the resource requirements are satisfied by a particular candidate target host, the particular candidate target host is assigned to be a target host. The at least one software container is migrated from the source host to the target host.</p>
+                                <a class = "btn btn-primary" href = "http://appft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&d=PG01&s1=20190250946.PGNR.">US 20190250946 A1</a>
+                            </div>
+                        </div>
+                        <!--## papers@MPA ##-->
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
+Imaging the Fermi gamma-ray sky
+                                    <small>2016</br>
+                                    Marco Selig, <u>Valentina Vacca</u>, Niels Oppermann, and Torsten A. En&#223;lin
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">We analyze the 6.5 year all-sky data from the Fermi Large Area Telescope in the energy range 0.6–307.2 GeV. Raw count maps show a superposition of diffuse and point-like emission structures and are subject to shot noise and instrumental artifacts. Using the Denoising, Deconvolving, and Decomposing Photon Observations D3PO algorithm, we modeled the observed photon counts as the sum of a diffuse and a point-like photon flux, convolved with the instrumental beam and subject to Poissonian shot noise, without the use of spatial or spectral templates. The D3PO algorithm performs a Bayesian inference and yields separate estimates for the two flux components. We show that the diffuse gamma-ray flux can be described phenomenologically by only two distinct components: a soft component, presumably dominated by hadronic processes, tracing the dense, cold interstellar medium, and a hard component, presumably dominated by leptonic interactions, following the hot and dilute medium and outflows such as the Fermi bubbles.</p>
+                                <a class = "btn btn-primary" href = "https://doi.org/10.22323/1.236.0768">PoS(ICRC2015)768</a>
                             </div>
                         </div>
                         <div class = "panel panel-default">
