--- a/bib.html
+++ b/bib.html
@@ -33,9 +33,21 @@
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
+<font style = "background-color: #333333;">PATENT APPLICATION</font><!-- SELF-TUNING PARALLELIZED BIG DATA FILE SYSTEM OPERATIONS 2020 -->
+                                    <small>2020+</br>
+                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Norman B&#246;wing
+                                    </small></h3>
+                                </div>
+                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                            </div>
+                        </div>
+                        <div class = "panel panel-default">
+                            <div class = "panel-body">
+                                <div class = "page-header align-left">
+                                    <h3>
 <font style = "background-color: #333333;">PATENT APPLICATION</font><!-- "ZSALAD" 2020 -->
                                     <small>2020+</br>
-                                    <u>Marco Selig</u>, Pavel Kravetskiy, Yuri Dragun
+                                    <u>Marco Selig</u>, Pavel Kravetskiy, Yuri Dragun, Dave Willoughby
                                     </small></h3>
                                 </div>
                                 <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
@@ -69,7 +81,7 @@
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
-<font style = "background-color: #333333;">PATENT APPLICATION</font><!-- SELECTIVE ENHANCEMENT OF INTERACTIVE CONFIGURATION INTERFACES 2018-->
+<font style = "background-color: #333333;">PATENT APPLICATION</font><!-- SELECTIVE ENHANCEMENT OF INTERACTIVE CONFIGURATION INTERFACES 2018 -->
                                     <small>2018+</br>
                                     Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Norman B&#246;wing
                                     </small></h3>
