[add] discord & updated references

--- a/bib.html
+++ b/bib.html
@@ -28,25 +28,26 @@
 
 
                     <div class = "col-lg-9">
-                        <!--## patents@IBM ##-->
+                    <!--## papers+@DBFZ ##-->
                         <div class = "panel panel-default">
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
-<font style = "background-color: #333333;">PATENT APPLICATION</font><!-- SELF-TUNING PARALLELIZED BIG DATA FILE SYSTEM OPERATIONS 2020 -->
-                                    <small>2020+</br>
-                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Norman B&#246;wing
+Die beste und einzige wissenschaftliche Praxis: Open Data
+                                    <small>2022 (German only)</br>
+                                    <u>Marco Selig</u>, Kai S. Radtke
                                     </small></h3>
                                 </div>
-                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                                <a class = "btn btn-primary" href = "https://dx.doi.org/10.48480/3z9p-cy88">10th status conference "Energetische Biomassenutzung"</a>
                             </div>
                         </div>
+                        <!--## patents@IBM ##--><!-- https://patents.google.com/?inventor=Marco+Selig -->
                         <div class = "panel panel-default">
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
 <font style = "background-color: #333333;">PATENT APPLICATION</font><!-- "ZSALAD" 2020 -->
-                                    <small>2020+</br>
+                                    <small>2022</br>
                                     <u>Marco Selig</u>, Pavel Kravetskiy, Yuri Dragun, Dave Willoughby
                                     </small></h3>
                                 </div>
@@ -57,36 +58,39 @@
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
-<font style = "background-color: #333333;">INTELLECTUAL PROPERTY</font><!-- WORKLOAD MANAGEMENT USING REINFORCEMENT LEARNING 2019 -->
-                                    <small>2019+</br>
-                                    <u>Marco Selig</u>, Tobias Huschle, Anastasiia Didkovska, Toni Pohl, Karin Genther, Dieter Wellerdiek, Elpida Tzortzatos
+Proactively performing tasks based on estimating hardware reconfiguration times
+                                    <small>2022</br>
+                                    Qais Noorshams, Simon Spinner, Norman C. B&#246;wing, <u>Marco Selig</u>, Pradeep Parameshwaran
                                     </small></h3>
                                 </div>
-                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                                <p class = "t8-3lines t8-expand">Proactively performing tasks based on estimating hardware reconfiguration times. A determination is made, prior to performing one or more reconfiguration actions to reconfigure a configuration of the computing environment, at least one estimated reconfiguration time to perform the one or more reconfiguration actions. At least one reconfiguration action of the one or more reconfiguration actions is performed, and one or more tasks are initiated prior to completing the one or more reconfiguration actions. The initiating is based on the at least one estimated reconfiguration time.</p>
+                                <a class = "btn btn-primary" href = "https://patft.uspto.gov/netacgi/nph-Parser?Sect1=PTO2&Sect2=HITOFF&p=1&u=%2Fnetahtml%2Fsearch-adv.htm&r=1&f=G&l=50&d=PALL&S1=(11263025)&OS=ref/11263025%22&RS=REF/11263025%22">US 2021-0373913 A1 / 11263025 B2</a>
                             </div>
                         </div>
                         <div class = "panel panel-default">
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
-<font style = "background-color: #333333;">INVENTION</font><!-- PROACTIVELY PERFORMING TASKS BASED ON ESTIMATING HARDWARE RECONFIGURATION TIMES 2019 -->
-                                    <small>2019+</br>
-                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Norman B&#246;wing, Simon Spinner
+Workload management using reinforcement learning
+                                    <small>2021</br>
+                                    Elpida Tzortzatos, Anastasiia Didkovska, Karin Genther, Toni Pohl, Dieter Wellerdiek, <u>Marco Selig</u>, Tobias Huschle
                                     </small></h3>
                                 </div>
-                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                                <p class = "t8-3lines t8-expand">Aspects of the invention include determining, by a machine learning model, a predicted workload for a system and a current system state of the system, determining an action to be enacted for the system based at least in part on the predicted workload and the current system state, enacting the action for the system, evaluating a state of the system after the action has been enacted, determining a reward for the machine learning model based at least in part on the state of the system after the action has been enacted, and updating the machine learning model based on the reward.</p>
+                                <a class = "btn btn-primary" href =                                "https://appft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&d=PG01&s1=20210311786.PGNR.">US 2021-0311786 A1</a>
                             </div>
                         </div>
                         <div class = "panel panel-default">
                             <div class = "panel-body">
                                 <div class = "page-header align-left">
                                     <h3>
-<font style = "background-color: #333333;">PATENT APPLICATION</font><!-- SELECTIVE ENHANCEMENT OF INTERACTIVE CONFIGURATION INTERFACES 2018 -->
-                                    <small>2018+</br>
-                                    Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Norman B&#246;wing
+Selective enhancement of interactive configuration interfaces
+                                    <small>2020</br>
+                                    Norman B&#246;wing, Qais Noorshams, Pradeep Parameshwaran, <u>Marco Selig</u>
                                     </small></h3>
                                 </div>
-                                <p class = "t8-3lines t8-expand">(non-disclosure obligation)</p>
+                                <p class = "t8-3lines t8-expand">A method for selectively generating suggested default values for I/O configurations is provided. The method identifies a first selection including a first input value for an I/O configuration. The method determines a set of remaining input options based on the first selection. The method accesses a set of decision trees based on the set of remaining input options and selects a decision tree of the set of decision trees based on the first input value. The method generates a suggested value for a subsequent selection for the I/O configuration and causes presentation of the suggested value and a user interface element representing the subsequent selection.</p>
+                                <a class = "btn btn-primary" href = "https://appft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&d=PG01&s1=20200401909.PGNR.">US 2020-0401909 A1</a>
                             </div>
                         </div>
                         <div class = "panel panel-default">
@@ -94,12 +98,12 @@
                                 <div class = "page-header align-left">
                                     <h3>
 Access control of specific encrypted data segment
-                                    <small>2020</br>
+                                    <small>2021</br>
                                     Pradeep Parameshwaran, Qais Noorshams, <u>Marco Selig</u>, Eric Kass
                                     </small></h3>
                                 </div>
                                 <p class = "t8-3lines t8-expand">A computer-implemented method for metadata-based retention of personal data may be provided. The method comprises recording data by a recording system. The data comprise payload data and metadata comprising information about the payload data and an event type; and a rule is associated with the event type, wherein the rule is indicative whether the data shall be stored persistently or temporary. The method comprises further segmenting the recorded data into a plurality of non-overlapping data segments, encrypting each data segment of the plurality of non-overlapping data segments with a unique key each, transmitting the encrypted data segments wirelessly, and storing, using a secure service container, selected ones of the plurality of non-overlapping data segments as a function of the rule.</p>
-                                <a class = "btn btn-primary" href = "http://appft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&d=PG01&p=1&u=%2Fnetahtml%2FPTO%2Fsrchnum.html&r=1&f=G&l=50&s1=%2220200285767%22.PGNR.&OS=DN/20200285767&RS=DN/20200285767">US 20200285767 A1</a>
+                                <a class = "btn btn-primary" href = "https://patft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&d=PALL&s1=11176269.PN.">US 2020-0285767 A1 / 11176269 B2</a>
                             </div>
                         </div>
                         <div class = "panel panel-default">
@@ -112,7 +116,7 @@ Migrating a software container taking into account resource constraints
                                     </small></h3>
                                 </div>
                                 <p class = "t8-3lines t8-expand">Provided is a method for determining a target host from a plurality of candidate hosts for migrating a software container. A management software component may instantiate a source agent software component on a source host and a target agent software component on each of a plurality of candidate target hosts. Resource requirements of at least one software container may be determined by the source agent software component. Resource capabilities of each of a plurality of target hosts may be determined by the target agent software components. The source agent software component may compare the resource requirements to the resource capabilities of each of the plurality of candidate target hosts. If the resource requirements are satisfied by a particular candidate target host, the particular candidate target host is assigned to be a target host. The at least one software container is migrated from the source host to the target host.</p>
-                                <a class = "btn btn-primary" href = "http://appft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&d=PG01&s1=20190250946.PGNR.">US 20190250946 A1</a>
+                                <a class = "btn btn-primary" href = "https://appft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&d=PG01&s1=20190250946.PGNR.">US 2019-0250946 A1</a>
                             </div>
                         </div>
                         <!--## papers@MPA ##-->
