--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
         <div class = "parallax" id = "diceB">
                 <div class = "container">
                     <div class = "row">
-                        <div class = "col-md-6">
+                        <div class = "col-md-4">
                             <div class = "list-group">
-                                <a href = "https://blog.musmehl.de/der-beginn-gandagor/" class = "list-group-item">
+                                <div class = "list-group-item">
                                     <center>
                                         <img src = "img/DSA.png" alt = "Das Schwarze Auge" class = "img-responsive icon">
                                         <h4 class = "list-group-item-heading">The Dark Eye</h4>
                                     </center>
-                                </a>
+                                </div>
                             </div>
                         </div>
-                        <div class = "col-md-6">
+                        <div class = "col-md-4">
                             <div class = "list-group">
                                 <a href = "https://steamcommunity.com/profiles/76561198019966795" class = "list-group-item">
                                     <center>
@@ -256,18 +256,16 @@
                                 </a>
                             </div>
                         </div>
-<!--
                         <div class = "col-md-4">
                             <div class = "list-group">
-                                <div class = "list-group-item">
+                                <a href = "https://discordapp.com/users/561926675269419008" class = "list-group-item">
                                     <center>
-                                        <img src = "img/origin.jpg" alt = "origin" class = "img-responsive icon">
-                                        <h4 class = "list-group-item-heading">LIT on origin</h4>
+                                        <img src = "img/discord.png" alt = "discord" class = "img-responsive icon">
+                                        <h4 class = "list-group-item-heading">LIT on discord</h4>
                                     </center>
-                                </div>
+                                </a>
                             </div>
                         </div>
--->
                     </div>
                 </div>
         </div>
